# nsm-cli

./: .gitmodules  CONTRIBUTING  Cargo.toml  README.md
src/: args.rs  cmd.rs  main.rs  server.rs
